Fix overflow issue with director block on agency pages

--- a/css/src/_director.scss
+++ b/css/src/_director.scss
@@ -3,10 +3,10 @@ $button-margin: 0;
 $top-overlap: 1.5rem;
 
 .director {
-	$off-page: 10000px;
-
+	background-color: $gray-lighter;
 	font-family: $opensans;
 	line-height: 1.2;
+	margin-top: $top-overlap;
 
 	&.with-strategic-plan {
 		margin-bottom: 0;
@@ -25,18 +25,6 @@ $top-overlap: 1.5rem;
 		padding-top: 1.75rem;
 		position: relative;
 
-		&::before {
-			content: "";
-			display: block;
-			position: absolute;
-			z-index: 1;
-			bottom: 0;
-			left: -1 * $off-page;
-			right: -1 * $off-page;
-			top: 0;
-			background-color: $gray-lighter;
-		}
-
 		> * {
 			position: relative;
 			z-index: 2;
@@ -45,6 +33,7 @@ $top-overlap: 1.5rem;
 
 	.photo-column {
 		z-index: 2;
+		margin-top: -$top-overlap;
 	}
 
 	.quote {
@@ -64,7 +53,6 @@ $top-overlap: 1.5rem;
 	}
 
 	.strategic-plan {
-		background-color: $gray-light-medium;
 		padding: 2rem 0;
 		text-align: center;
 
@@ -108,7 +96,6 @@ $top-overlap: 1.5rem;
 
 	@include breakpoint(small only){
 		.layout-container {
-			background-color: $dark-blue;
 			padding: {
 				left: $small-side-spacing;
 				right: $small-side-spacing;
@@ -132,10 +119,8 @@ $top-overlap: 1.5rem;
 	}
 
 	@include breakpoint(medium){
-		overflow: hidden;
 		position: relative;
 		z-index: 2;
-		margin-top: -$top-overlap;
 
 		.layout-container {
 			@include xy-grid-container(800px, 0);
@@ -150,14 +135,6 @@ $top-overlap: 1.5rem;
 
 		.text-column {
 			@include xy-cell(9, $gutter-type: padding, $gutters: 1.75rem);
-			margin-top: $top-overlap;
-
-			&::before {
-				bottom: 0;
-				left: -1 * $off-page;
-				right: -1 * $off-page;
-				top: 0;
-			}
 
 			@include breakpoint(1040px down){
 				padding: {
